@@ -2,6 +2,7 @@
 v4.2.3-git
 ----------
 
+[mms] Added ability to link to note via API.
 
 
 ------
